--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ Packages
 .build/
 xcuserdata
 DerivedData/
-*.xcodeproj
-
 
 ### Xcode ###
 ## User settings
@@ -16,5 +14,4 @@ xcuserdata/
 ## Xcode 8 and earlier
 *.xcscmblueprint
 *.xccheckout
-
-# End of https://www.toptal.com/developers/gitignore/api/xcode,swiftpackagemanager
+xcshareddata
